Update to Java 22+ with stable FFM API
- Changed MANIFEST.MF to require JavaSE-22 instead of JavaSE-21
- Removed --enable-preview flag from pom.xml (FFM is stable in Java 22)
- Updated SpawnerNativeInterface.java comments to reflect Java 22+ requirement
- Updated FFM_MIGRATION.md with Java 22+ details and Java 21 compatibility notes
- FFM API is now stable (no preview flag needed) in Java 22+
- Added note for Java 21 users who still need --enable-preview

Co-authored-by: laeubi <1331477+laeubi@users.noreply.github.com>